fix(popup): deal with container height overflow (#3586)

--- a/src/popup/popup.less
+++ b/src/popup/popup.less
@@ -12,12 +12,13 @@
 .@{popup} {
   position: fixed;
   z-index: 11500;
-  max-height: 100vh;
+  max-height: calc(100vh - var(--td-popup-distance-top, 0));
   transition: all 300ms ease;
   background-color: @popup-bg-color;
 
   &__content {
     position: relative;
+    height: 100%;
     z-index: 1;
   }
 
@@ -51,13 +52,13 @@
   &--left {
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
   }
 
   &--right {
     top: 0;
     right: 0;
-    height: 100vh;
+    height: 100%;
   }
 
   &--center {
